<resources>
    <string name="app_name">Life2Food</string>
    <string name="profile">Perfil</string>
    <string name="cart">Carrito</string>
    <string name="supermarket">Supermercado</string>
    <string name="restaurant">Restaurante</string>
    <string name="orders">Ordenes</string>
    <string name="profile_picture">Imagen de perfil</string>
    <string name="delete_product">Eliminar</string>
    <string name="add_product">Agregar</string>
    <string-array name="product_types">
        <item>Bebidas</item>
        <item>Legumbres</item>
        <item>Frutas</item>
        <item>Verduras</item>
        <item>Snacks</item>
        <item>Pastas</item>
    </string-array>

    <string-array name="direction_types">
        <item>Calle</item>
        <item>Carrera</item>
    </string-array>

</resources>